--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=DLH-BANYUWANGI
 APP_ENV=local
-APP_KEY=base64:0F/d8anZMURhqm99IDmEbeb8XZVpHAXvjlQFHD7SX5Q=
+APP_KEY=base64:e/fiq+aLEZ1LLnQvTQq1pNmaSnau3Z/IRRyF28PxS+o=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -56,3 +56,5 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+WWWGROUP=1000
+WWWUSER=1000
