--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,15 @@
 APP_NAME=DLH-BANYUWANGI
 APP_ENV=local
-APP_KEY=base64:e/fiq+aLEZ1LLnQvTQq1pNmaSnau3Z/IRRyF28PxS+o=
+APP_KEY=base64:Unv/W/Z6h7l+8CzdCQXeC+tyMJ2iJ7mJfxc7AU6zpQo=
 APP_DEBUG=true
 APP_URL=http://localhost
-
+APP_PORT=8000
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
-
 DB_CONNECTION=mysql
 DB_HOST=mysql
-DB_PORT=3307
+DB_PORT=3306
 DB_DATABASE=laravel
 DB_USERNAME=sail
 DB_PASSWORD=password
