--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,20 +45,9 @@ services:
                 - CMD
                 - mysqladmin
                 - ping
-                - '-p${DB_PASSWORD}'
+                - '${DB_PASSWORD}'
             retries: 3
             timeout: 5s
-    phpmyadmin:
-        image: phpmyadmin
-        restart: always
-        ports:
-        - 8080:80
-        environment:
-        - PMA_ARBITRARY=1
-        networks:
-            - sail
-        depends_on:
-            - mysql
 networks:
     sail:
         driver: bridge
