--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=DLH-BANYUWANGI
 APP_ENV=local
-APP_KEY=base64:Unv/W/Z6h7l+8CzdCQXeC+tyMJ2iJ7mJfxc7AU6zpQo=
+APP_KEY=base64:zVMwlUZT4mwD9WXFuMR4pLGlzowBbS4KV+Eb141bGPY=
 APP_DEBUG=true
 APP_URL=http://localhost
 APP_PORT=8000
@@ -11,8 +11,8 @@ LOG_LEVEL=debug
 FORWARD_DB_PORT=3307
 DB_CONNECTION=mysql
 DB_HOST=mysql
-DB_PORT=3307
-DB_DATABASE=laravel
+DB_PORT=3306
+DB_DATABASE=dlh
 DB_USERNAME=sail
 DB_PASSWORD=password
 
