--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,11 @@ version: '3'
 services:
      laravel.test:
           build:
-               context: ./docker/8.0
+               context: ./docker/8.1
                dockerfile: Dockerfile
                args:
                     WWWGROUP: '${WWWGROUP}'
-          image: sail-8.0/app
+          image: sail-8.1/app
           extra_hosts:
                - 'host.docker.internal:host-gateway'
           ports:
@@ -36,7 +36,7 @@ services:
                MYSQL_ALLOW_EMPTY_PASSWORD: 1
           volumes:
                - 'sail-mysql:/var/lib/mysql'
-               - './default.sql:/docker-entrypoint-initdb.d/dump.sql'
+               - './docker/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
           networks:
                - sail
           healthcheck:
@@ -44,7 +44,7 @@ services:
                     - CMD
                     - mysqladmin
                     - ping
-                    - '${DB_PASSWORD}'
+                    - '-p${DB_PASSWORD}'
                retries: 3
                timeout: 5s
 networks:
