--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
         "postcss": "^8.4.21",
+        "sass": "^1.69.7",
         "tailwindcss": "^3.2.4",
         "vite": "^4.0.0"
     },
