--- a/docker/8.1/supervisord.conf
+++ b/docker/8.1/supervisord.conf
@@ -12,3 +12,10 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
+
+[program:laravel-scheduler]
+command=php artisan schedule:run
+autostart=true
+autorestart=true
+stdout_logfile=/var/log/cron.out.log
+stderr_logfile=/var/log/cron.err.log
