--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dependencies": {
         "@tailwindcss/line-clamp": "^0.4.2",
         "chart.js": "^4.2.0",
-        "daisyui": "^2.47.0"
+        "daisyui": "^2.47.0",
+        "tailwind": "^4.0.0"
     }
 }
