--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@tailwindcss/typography": "^0.5.10",
         "autoprefixer": "^10.4.13",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
@@ -18,6 +19,7 @@
         "@tailwindcss/line-clamp": "^0.4.2",
         "chart.js": "^4.2.0",
         "daisyui": "^2.47.0",
+        "swiper": "^11.0.5",
         "tailwind": "^4.0.0"
     }
 }
